# openai_function_calling

./: README.md  pyproject.toml
src/: api.py  function_calling.py  test.py
src/function_calling/: __init__.py  api.py  models.py
